[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://logo.png" type="Texture" id=2]
[ext_resource path="res://silkscreen.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Menu/VBoxContainer/Logo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu/VBoxContainer/Logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 3 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu/VBoxContainer/Buttons/StartButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 2.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 75, 30 ), Vector2( 75, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu/VBoxContainer/Buttons/HowToButton:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.3, 2.7 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 58, 81 ), Vector2( 58, 51 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Menu/VBoxContainer/Buttons/MoreButton:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.6, 3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 87, 132 ), Vector2( 87, 102 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Menu/VBoxContainer/Buttons/StartButton:modulate")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Menu/VBoxContainer/Buttons/HowToButton:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.3, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Menu/VBoxContainer/Buttons/MoreButton:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Background" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.752941, 0.819608, 1 )

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 352.0
margin_top = 118.0
margin_right = 671.0
margin_bottom = 481.0
custom_constants/separation = 50
alignment = 1

[node name="Logo" type="TextureRect" parent="Menu/VBoxContainer"]
margin_right = 319.0
margin_bottom = 164.0
texture = ExtResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 214.0
margin_right = 319.0
margin_bottom = 363.0

[node name="StartButton" type="Button" parent="Menu/VBoxContainer/Buttons"]
margin_left = 75.0
margin_right = 244.0
margin_bottom = 47.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Start"
flat = true

[node name="HowToButton" type="Button" parent="Menu/VBoxContainer/Buttons"]
margin_left = 58.0
margin_top = 51.0
margin_right = 260.0
margin_bottom = 98.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "how to"
flat = true

[node name="MoreButton" type="Button" parent="Menu/VBoxContainer/Buttons"]
margin_left = 87.0
margin_top = 102.0
margin_right = 232.0
margin_bottom = 149.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "more"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 1 )
[connection signal="pressed" from="Menu/VBoxContainer/Buttons/StartButton" to="Menu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Buttons/HowToButton" to="Menu" method="_on_HowToButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Buttons/MoreButton" to="Menu" method="_on_MoreButton_pressed"]
